# PlectoProxy

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.ja.md  README.md  SECURITY.md  justfile
bench/filters/filter-noop/: Cargo.toml
bench/filters/filter-noop/src/: lib.rs
bench/filters/filter-resp/: Cargo.toml
bench/filters/filter-resp/src/: lib.rs
bench/loadgen/: Cargo.toml
bench/loadgen/src/: main.rs  openloop.rs  ws.rs
demo/: Cargo.toml
demo/src/: lib.rs
plecto/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml  wkg-registry.toml
plecto/crates/control/: CONTEXT.md  Cargo.toml
plecto/crates/control/benches/: fastpath.rs  fastpath_inst.rs
plecto/crates/control/src/: artifact.rs  chain.rs  control_observability.rs  control_reload.rs  diagnostic.rs  error.rs  lib.rs  maglev.rs  manifest.rs  oci.rs  reload.rs  route.rs  snapshot.rs  stek.rs  tls.rs  upstream.rs  weighted.rs
plecto/crates/control/src/manifest/: chain.rs  content_hash.rs  filter_entry.rs  listen.rs  lowering.rs  mod.rs  observability.rs  resumption.rs  route.rs  state.rs  tls.rs  trust.rs  upstream.rs  validate.rs
plecto/crates/control/src/upstream/: circuit_breaker.rs  lb.rs  mod.rs  outlier.rs  registry.rs
plecto/crates/control/tests/: control.rs  oci_layout.rs  reload.rs
plecto/crates/filter-apikey/src/: lib.rs
plecto/crates/filter-hello/: Cargo.toml
plecto/crates/filter-hello/src/: lib.rs
plecto/crates/host/: CONTEXT.md  Cargo.toml  build.rs
plecto/crates/host/benches/: kv_backend.rs  wasm.rs  wasm_inst.rs
plecto/crates/host/fixtures/filter-compat-v02/: Cargo.toml
plecto/crates/host/src/: backend.rs  conformance.rs  contract.rs  dev_signer.rs  engine.rs  errors.rs  filter.rs  host.rs  lib.rs  observe.rs  options.rs  otlp.rs  outbound.rs  outbound_http.rs  outbound_tcp.rs  pool.rs  quota.rs  resolver.rs  runtime.rs  state.rs  stdio.rs  streaming.rs  test_support.rs  trust.rs  util.rs
plecto/crates/host/tests/: apikey.rs  compat_v02.rs  conformance.rs  cors.rs  e2e.rs  extauthz.rs  jwt.rs  observe.rs  polyglot.rs  polyglot_tier_b.rs  pool.rs  ratelimit_redis.rs  streaming.rs  tcp_gate.rs
plecto/crates/host/wit-streaming/: streaming.wit
plecto/crates/host/wit/v0.1.0/: world.wit
plecto/crates/host/wit/v0.2.0/: world.wit
plecto/crates/plecto/: CONTEXT.md  Cargo.toml
plecto/crates/plecto/src/: cli.rs  dev_cmd.rs  dev_key.rs  main.rs  new_filter.rs
plecto/crates/plecto/templates/filter-template/: Cargo.toml.template
plecto/crates/plecto/tests/: binary_signals.rs  healthz.rs  package.rs
plecto/crates/server/: CONTEXT.md  Cargo.toml
plecto/crates/server/examples/: demo.rs
plecto/crates/server/src/: admin.rs  body.rs  compression.rs  conn_limit.rs  dev_cmd.rs  dev_key.rs  dispatch.rs  dns.rs  error.rs  forward.rs  h3.rs  headers.rs  health.rs  lib.rs  listener.rs  main.rs  metrics.rs  new_filter.rs  otlp.rs  proxy.rs  proxy_protocol.rs  respond.rs  retry.rs  tunnel.rs  upstream_client.rs
plecto/crates/server/src/h3/: body.rs  endpoint.rs  mod.rs  request.rs
plecto/crates/server/templates/filter-template/: Cargo.toml.template
plecto/crates/server/tests/: auth.rs  body.rs  circuit_breaker.rs  cli.rs  compression.rs  dns_resolve.rs  e2e.rs  h2.rs  h3.rs  header_bytes.rs  lb.rs  listen.rs  observability.rs  otlp.rs  outlier.rs  overall_timeout.rs  proxy_protocol.rs  rate_limit.rs  response_context.rs  retry.rs  routing_adr34.rs  shutdown.rs  timeout.rs  tls.rs  upgrade.rs  upstream_tls.rs
plecto/examples/: README.md  demo.rs  try.sh
plecto/examples/canary/: README.md  main.rs
plecto/examples/edge-bench/: main.rs
plecto/examples/filter-chain/: README.md  main.rs
plecto/examples/filters/filter-apikey/: Cargo.toml
plecto/examples/filters/filter-apikey/src/: lib.rs
plecto/examples/filters/filter-cors/: Cargo.toml  README.md
plecto/examples/filters/filter-cors/src/: lib.rs
plecto/examples/filters/filter-extauthz/: Cargo.toml
plecto/examples/filters/filter-extauthz/src/: lib.rs
plecto/examples/filters/filter-hello/: Cargo.toml
plecto/examples/filters/filter-hello-c/: build.sh
plecto/examples/filters/filter-hello-c/src/: filter.c
plecto/examples/filters/filter-hello-go/: .gitignore  build.sh  go.mod  main.go
plecto/examples/filters/filter-hello-go/wit/: world.wit
plecto/examples/filters/filter-hello-js/: build.mjs  build.sh  filter.js  package-lock.json  package.json
plecto/examples/filters/filter-hello-moonbit/: build.sh  moon.mod.json
plecto/examples/filters/filter-hello/src/: lib.rs
plecto/examples/filters/filter-jwt/: Cargo.toml  README.md
plecto/examples/filters/filter-jwt/src/: lib.rs
plecto/examples/filters/filter-quickstart/: Cargo.toml
plecto/examples/filters/filter-ratelimit-redis/: Cargo.toml
plecto/examples/filters/filter-streaming/: Cargo.toml
plecto/examples/filters/filter-tcp-gate/: Cargo.toml
plecto/examples/filters/filter-template/: Cargo.toml  README.md  cargo-generate.toml  manifest.toml
plecto/examples/hot-reload/: README.md  main.rs
plecto/examples/load-balancing/: README.md  main.rs
plecto/examples/multi-replica/: .gitignore  README.md  compose.scenario-a.yaml  compose.scenario-b.yaml  compose.yaml
plecto/examples/multi-replica/lb/: haproxy.cfg
plecto/examples/multi-replica/manifests/: base.toml  scenario-a.toml  scenario-b.toml
plecto/examples/multi-replica/scripts/: gen-certs.sh  verify-drain.sh  verify-mtls.sh  verify-resumption.sh
plecto/examples/production/: README.md  main.rs
plecto/examples/quickstart/: README.md  main.rs
plecto/examples/resilience/: README.md  main.rs
plecto/examples/tls-http/: README.md  main.rs
plecto/examples/wasm-auth/: README.md  main.rs
plecto/examples/wasm-bench/: main.rs
plecto/fuzz/: .gitignore  Cargo.toml
plecto/fuzz/fuzz_targets/: proxy_v2.rs
plecto/spike/streaming-async/: README.md
plecto/spike/streaming-async/guest/: Cargo.toml
plecto/wit/: wkg.toml  world.wit
plecto/wit-streaming/: wkg.toml
plecto/wit/v0.3.0/: world.wit
(+241 files in other folders)
