[package]
name = "plecto-demo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# wasm-bindgen PoC, kept for reference. Targets wasm32-unknown-unknown.
# Not part of the plecto/ workspace (the wasmtime host lives there).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.125"
console_error_panic_hook = "0.1.7"

[workspace]
