# Plecto workspace — the native-Rust half (fast path / wasmtime host).
# The wasm32-wasip2 guest (crates/filter-hello) is EXCLUDED so `cargo test --all`
# never tries to build it for the host target; it is built separately for
# wasm32-wasip2 (see crates/host/build.rs).
[workspace]
resolver = "3"
members = ["crates/host", "crates/control"]
exclude = ["crates/filter-hello"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Kaikei-e/Plecto"

[workspace.dependencies]
wasmtime = "45.0.2"
anyhow = "1"
# redb: embedded transactional KV — durable host-state backend (ADR 000004).
redb = "4.1"
# parking_lot: non-poisoning locks. A panicking filter thread must not cascade a
# poisoned lock across every later request (ADR 000011). Sync today; redb's blocking
# story moves behind a pool only when wasmtime 46 makes host calls async.
parking_lot = "0.12"
# tracing: host-internal diagnostics (never println!, bp-rust). Distinct from the
# host-log capability, which is the filter-facing log surface.
tracing = "0.1"
# sigstore: cosign signature verification at filter load time (ADR 000006 provenance).
# default-features=false keeps it to the offline `crypto` module — keyed verify with a
# local public key, NO Fulcio / Rekor / OCI-registry / network (verified footprint). cosign
# `sign-blob` over the component/SBOM bytes; the registry fetch + base64 decode is the
# ADR 000007 / wkg boundary, kept out of the host.
sigstore = { version = "0.14.0", default-features = false }
# opentelemetry: the OTel data model ONLY (ADR 000009 host observability stage). We pull just
# the API crate's `trace` types (TraceId/SpanId/SpanContext/SpanKind/Status/KeyValue/Event) —
# default-features=false drops `metrics`/`logs`/`tracing`/`futures`, and crucially NO `rt-tokio`,
# so this stays no-tokio. The async `SpanExporter` SDK + OTLP network export (and the wasi-otel
# guest contract) are named-deferred; our sync `TelemetrySink` seam maps to them later.
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }

# --- plecto-control (ADR 000007 / 000008): declarative manifest, OCI artifact load,
# --- chain dispatch, atomic hot-reload. ---
# thiserror: typed domain errors in the control library layer (bp-rust).
thiserror = "2"
# serde + toml: the declarative manifest (ADR 000008 static config). TOML mirrors Cargo.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# serde_json: serialize the OCI image-manifest blob to bytes we digest + write (ADR 000007).
serde_json = "1"
# arc-swap: lock-free atomic swap of the active filter set on reload (ADR 000007).
arc-swap = "1"
# sha2 + hex: OCI content-digest pinning (sha256 over blob bytes), pure-Rust / offline.
sha2 = "0.10"
hex = "0.4"
# oci-spec: spec-correct OCI image-layout types; we own the std::fs layout + sha256 verify
# (offline local artifact, no registry/tokio/openssl — ADR 000007 boundary with wkg).
oci-spec = { version = "0.10", default-features = false, features = ["image"] }
