# Plecto workspace — the native-Rust half (fast path / wasmtime host).
# The wasm32-wasip2 guest (crates/filter-hello) is EXCLUDED so `cargo test --all`
# never tries to build it for the host target; it is built separately for
# wasm32-wasip2 (see crates/host/build.rs).
[workspace]
resolver = "3"
members = ["crates/host", "crates/control", "crates/server"]
exclude = ["crates/filter-hello"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Kaikei-e/Plecto"

[workspace.dependencies]
# Pinned to 46.0.0 exactly for the M3 Stage 1 host async migration (ADR 000021): wasmtime 46
# (2026-06-22) ships Component Model async + WASI 0.3 by default. The async / bindgen API is still
# moving at this release, so we hold the exact version (Cargo.lock pins the resolved build) rather
# than letting it float; this lives on a migration branch, not main.
wasmtime = "46.0.0"
anyhow = "1"
# redb: embedded transactional KV — durable host-state backend (ADR 000004).
redb = "4.1"
# parking_lot: non-poisoning locks. A panicking filter thread must not cascade a
# poisoned lock across every later request (ADR 000011). Sync today; redb's blocking
# story moves behind a pool only when wasmtime 46 makes host calls async.
parking_lot = "0.12"
# tracing: host-internal diagnostics (never println!, bp-rust). Distinct from the
# host-log capability, which is the filter-facing log surface.
tracing = "0.1"
# sigstore: cosign signature verification at filter load time (ADR 000006 provenance).
# default-features=false keeps it to the offline `crypto` module — keyed verify with a
# local public key, NO Fulcio / Rekor / OCI-registry / network (verified footprint). cosign
# `sign-blob` over the component/SBOM bytes; the registry fetch + base64 decode is the
# ADR 000007 / wkg boundary, kept out of the host.
sigstore = { version = "0.14.0", default-features = false }
# opentelemetry: the OTel data model ONLY (ADR 000009 host observability stage). We pull just
# the API crate's `trace` types (TraceId/SpanId/SpanContext/SpanKind/Status/KeyValue/Event) —
# default-features=false drops `metrics`/`logs`/`tracing`/`futures`, and crucially NO `rt-tokio`,
# so this stays no-tokio. The async `SpanExporter` SDK + OTLP network export (and the wasi-otel
# guest contract) are named-deferred; our sync `TelemetrySink` seam maps to them later.
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }

# --- plecto-control (ADR 000007 / 000008): declarative manifest, OCI artifact load,
# --- chain dispatch, atomic hot-reload. ---
# thiserror: typed domain errors in the control library layer (bp-rust).
thiserror = "2"
# serde + toml: the declarative manifest (ADR 000008 static config). TOML mirrors Cargo.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# serde_json: serialize the OCI image-manifest blob to bytes we digest + write (ADR 000007).
serde_json = "1"
# arc-swap: lock-free atomic swap of the active filter set on reload (ADR 000007).
arc-swap = "1"
# sha2 + hex: OCI content-digest pinning (sha256 over blob bytes), pure-Rust / offline.
sha2 = "0.10"
hex = "0.4"
# oci-spec: spec-correct OCI image-layout types; we own the std::fs layout + sha256 verify
# (offline local artifact, no registry/tokio/openssl — ADR 000007 boundary with wkg).
oci-spec = { version = "0.10", default-features = false, features = ["image"] }

# --- plecto-server (ADR 000013): the M2 fast-path data path. The FIRST tokio users in the
# --- workspace — the host + control halves stay sync; only the network edge is async. ---
# tokio: the async runtime for the fast path. The sync filter chain runs on spawn_blocking
# (the M1 trusted pool handles instance reuse), so wasmtime's !Send Store never crosses .await.
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time", "signal"] }
# hyper 1.x: HTTP/1.1 + HTTP/2 server (downstream, ADR 000015) + client (upstream, HTTP/1.1).
# h3 (quinn) comes later. The h2 termination is TLS+ALPN only (no h2c).
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
# hyper-util: TokioIo adapter + the pooling legacy client (upstream connection reuse for free).
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
# http-body-util: body combinators (Full for synthesised responses, BoxBody to unify the
# short-circuit body and the streamed upstream body, BodyExt for map_err/boxed).
http-body-util = "0.1"
bytes = "1"

# --- TLS termination (ADR 000013 slice / ADR 000014). rustls + the `ring` crypto provider:
# --- default-features=false drops the aws-lc-rs default (no cmake / C toolchain), keeping the
# --- build light and pure-Rust-leaning (no openssl), consistent with the rest of the stack. ---
# rustls (sync): control builds the ServerConfig (SNI cert resolver, ALPN) so a bad cert fails
# the build fail-closed and reload swaps it atomically. No tokio here — control stays sync. PEM
# cert/key parsing uses rustls-pki-types' `pem` module (re-exported by rustls), NOT the separate
# rustls-pemfile crate, which is unmaintained (RUSTSEC-2025-0134).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# tokio-rustls: the async TLS acceptor the server wraps each accepted TCP stream with.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }

# --- HTTP/3 (ADR 000016): quinn(QUIC) + the h3 crate, an independent UDP listener. QUIC's TLS is
# --- rustls 1.3 only (ALPN "h3"), sharing ADR 000014's SNI cert resolver. quinn with `rustls-ring`
# --- keeps the `ring` provider (no aws-lc-rs / cmake), consistent with the TLS stack. h3-quinn
# --- bridges quinn <-> h3 and pins quinn ^0.11.7, so cargo unifies a single quinn. ---
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
