# Plecto workspace — the native-Rust half (fast path / wasmtime host).
# The example filter guests (examples/filters/*) are SEPARATE workspaces, built for
# wasm32-unknown-unknown and componentized by crates/host/build.rs — never absorbed into
# this host-target workspace (so `cargo test --all` never builds them for the host target).
[workspace]
resolver = "3"
members = ["crates/host", "crates/control", "crates/server"]
# The cargo-fuzz harness (ADR 000057) is its own workspace, like the example filter guests:
# libfuzzer targets need nightly + sanitizer flags that must never leak into `cargo test --all`.
exclude = ["fuzz"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Kaikei-e/Plecto"
homepage = "https://github.com/Kaikei-e/Plecto"
keywords = ["proxy", "gateway", "wasm", "webassembly", "http"]
categories = ["network-programming", "web-programming", "wasm"]
# Not published to crates.io yet (early development). Flip per-crate when distribution begins.
publish = false

[workspace.dependencies]
# wasmtime 46.0.x for the M3 Stage 1 host async migration (ADR 000021): wasmtime 46
# (2026-06-22) ships Component Model async + WASI 0.3 by default. The async / bindgen API is still
# moving on this line, so we track the latest 46 patch (Cargo.lock pins the resolved build).
wasmtime = "46.0.1"
anyhow = "1"
# redb: embedded transactional KV — durable host-state backend (ADR 000004).
redb = "4.1"
# parking_lot: non-poisoning locks. A panicking filter thread must not cascade a
# poisoned lock across every later request (ADR 000011). Sync today; redb's blocking
# story moves behind a pool only when wasmtime 46 makes host calls async.
parking_lot = "0.12"
# tracing: host-internal diagnostics (never println!, bp-rust). Distinct from the
# host-log capability, which is the filter-facing log surface.
tracing = "0.1"
# tracing-subscriber: the fast-path binary's JSON log + access-log formatter (ADR 000009 Stage A).
# Minimal features — NO `ansi` (drops nu-ansi-term) and NO `env-filter` (drops the regex pull) —
# keeps the dependency / supply-chain footprint small (deny.toml). The library never installs a
# subscriber; only `plecto-server`'s `main` does, so the rest of the workspace stays subscriber-free.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "std"] }
# sigstore: cosign signature verification at filter load time (ADR 000006 provenance).
# default-features=false keeps it to the offline `crypto` module — keyed verify with a
# local public key, NO Fulcio / Rekor / OCI-registry / network (verified footprint). cosign
# `sign-blob` over the component/SBOM bytes; the registry fetch + base64 decode is the
# ADR 000007 / wkg boundary, kept out of the host.
sigstore = { version = "0.14.0", default-features = false }
# opentelemetry: the OTel data model ONLY (ADR 000009 host observability stage). We pull just
# the API crate's `trace` types (TraceId/SpanId/SpanContext/SpanKind/Status/KeyValue/Event) —
# default-features=false drops `metrics`/`logs`/`tracing`/`futures`, and crucially NO `rt-tokio`,
# so this stays no-tokio. The async `SpanExporter` SDK + OTLP network export (and the wasi-otel
# guest contract) are named-deferred; our sync `TelemetrySink` seam maps to them later.
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }

# --- plecto-control (ADR 000007 / 000008): declarative manifest, OCI artifact load,
# --- chain dispatch, atomic hot-reload. ---
# thiserror: typed domain errors in the control library layer (bp-rust).
thiserror = "2"
# ipnet: CIDR parsing/containment for the outbound `allow_private` opt-in ranges (ADR 000036).
# Optional in both crates behind their `outbound-http` feature; pinned here to keep versions aligned
# (the parsed `IpNet` crosses the control→host boundary).
ipnet = "2"
# serde + toml: the declarative manifest (ADR 000008 static config). TOML mirrors Cargo.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# serde_json: serialize the OCI image-manifest blob to bytes we digest + write (ADR 000007).
serde_json = "1"
# schemars: derive the manifest JSON Schema from the same serde model (ADR 000049) —
# draft-07 output for taplo/Even Better TOML. Default features only (no chrono/url pulled).
schemars = "1"
# arc-swap: lock-free atomic swap of the active filter set on reload (ADR 000007).
arc-swap = "1"
# sha2 + hex: OCI content-digest pinning (sha256 over blob bytes), pure-Rust / offline.
sha2 = "0.10"
hex = "0.4"
# oci-spec: spec-correct OCI image-layout types; we own the std::fs layout + sha256 verify
# (offline local artifact, no registry/tokio/openssl — ADR 000007 boundary with wkg).
oci-spec = { version = "0.10", default-features = false, features = ["image"] }

# --- plecto-server (ADR 000013): the M2 fast-path data path. The FIRST tokio users in the
# --- workspace — the host + control halves stay sync; only the network edge is async. ---
# tokio: the async runtime for the fast path. The sync filter chain runs on spawn_blocking
# (the M1 trusted pool handles instance reuse), so wasmtime's !Send Store never crosses .await.
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time", "signal"] }
# hyper 1.x: HTTP/1.1 + HTTP/2 server (downstream, ADR 000015) + client (upstream, HTTP/1.1).
# h3 (quinn) comes later. The h2 termination is TLS+ALPN only (no h2c).
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
# hyper-util: TokioIo adapter + the pooling legacy client (upstream connection reuse for free).
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
# http-body-util: body combinators (Full for synthesised responses, BoxBody to unify the
# short-circuit body and the streamed upstream body, BodyExt for map_err/boxed).
http-body-util = "0.1"
bytes = "1"

# --- TLS termination (ADR 000013 slice / ADR 000014 / ADR 000051). rustls + the `aws_lc_rs`
# --- crypto provider: `sigstore` (cosign signature verification, ADR 000006/000047) already
# --- unconditionally links aws-lc-rs regardless of feature flags, so this is a one-backend
# --- consolidation, not a new dependency — see ADR 000051 for the full rationale (why the prior
# --- `ring` default's "avoid vendored C" premise did not hold). `prefer-post-quantum` puts the
# --- X25519MLKEM768 hybrid key exchange first in the negotiation order (rustls 0.23.27+ default). ---
# rustls (sync): control builds the ServerConfig (SNI cert resolver, ALPN) so a bad cert fails
# the build fail-closed and reload swaps it atomically. No tokio here — control stays sync. PEM
# cert/key parsing uses rustls-pki-types' `pem` module (re-exported by rustls), NOT the separate
# rustls-pemfile crate, which is unmaintained (RUSTSEC-2025-0134).
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "prefer-post-quantum", "std", "tls12", "logging"] }
# tokio-rustls: the async TLS acceptor the server wraps each accepted TCP stream with.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12", "logging"] }
# webpki-roots: compiled-in Mozilla roots for upstream TLS verification (ADR 000042) when no
# custom CA is configured — no OS cert-store dependency.
webpki-roots = "1"
# hyper-rustls: the upstream HTTPS connector (ADR 000042) — TLS re-encryption toward upstreams
# with ALPN-negotiated h2 / http/1.1 over the pooling legacy client. `aws-lc-rs` matches the
# rustls/tokio-rustls stack above (ADR 000051).
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "aws-lc-rs", "tls12", "logging"] }

# --- HTTP/3 (ADR 000016): quinn(QUIC) + the h3 crate, an independent UDP listener. QUIC's TLS is
# --- rustls 1.3 only (ALPN "h3"), sharing ADR 000014's SNI cert resolver. `rustls-aws-lc-rs`
# --- (ADR 000051) keeps QUIC on the same single crypto backend as the rest of the TLS stack —
# --- quinn's own Cargo default is `rustls-ring`, so this must be selected explicitly. h3-quinn
# --- bridges quinn <-> h3 and pins quinn ^0.11.7, so cargo unifies a single quinn. ---
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs", "log"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
