[package]
name = "plecto-control"
description = "Plecto's control plane: declarative manifest, OCI artifact loading, filter-chain dispatch, and atomic hot reload."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# plecto-control — the control plane (ADR 000007 / 000008): a single declarative TOML
# manifest pins filters by OCI digest, an offline OCI image-layout store resolves them,
# the host loads them (ADR 000006 provenance), a chain dispatcher drives a request through
# them, and reload swaps the active set atomically. Single-node-first; remote registry fetch
# (wkg) is an out-of-band operator step, not embedded here.

# No libtest `#[bench]` fns in the lib; disable its bench harness so `cargo bench` runs ONLY the
# criterion targets (which alone understand `--save-baseline` for the CI regression gate).
[lib]
bench = false

[features]
# Forwards to the host's outbound HTTP capability (ADR 000036). OFF by default: without it a
# manifest that declares `[filter.outbound]` is rejected at validate (fail-closed), since the host
# cannot provide the capability. When on, the section is parsed, validated, and lowered into the
# host `LoadOptions`. Pulls `ipnet` for CIDR validation of the `allow_private` opt-in.
outbound-http = ["plecto-host/outbound-http", "dep:ipnet"]

[dependencies]
plecto-host = { path = "../host" }
anyhow = { workspace = true }
# outbound-http only: CIDR parse/containment for the `[filter.outbound] allow_private` ranges.
ipnet = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
# parking_lot: non-poisoning locks for the native rate limiter's bucket cells (ADR 000033). A
# data-plane panic must not cascade a poisoned lock across later requests (same rationale as the
# host's KV backend); the tiny lock also keeps the per-IP fixed table's per-slot guards cheap.
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
oci-spec = { workspace = true }
# tracing: control-plane diagnostics for the reload loop (bp-rust: never println!).
tracing = { workspace = true }
# signal-hook: pure-Rust, no-tokio SIGHUP receiver behind the `ReloadSource` seam. SIGHUP is
# the operator's explicit "push a new static manifest" trigger (ADR 000008: static config, no
# xDS dynamic push). The trait keeps the loop fake-testable; this is the thin unix adapter.
signal-hook = "0.3"
# rustls (sync): build the TLS ServerConfig from the manifest's `[[tls]]` certs (SNI resolver,
# ALPN) at load/reload, so a bad cert fails closed and reload is atomic (ADR 000014). PEM parsing
# uses rustls-pki-types' `pem` module (re-exported by rustls). No tokio — control stays sync; the
# async acceptor lives in plecto-server.
rustls = { workspace = true }

[dev-dependencies]
# unique temp dirs for OCI-layout fixtures and trusted-key PEM files
tempfile = "3"
# rcgen: a fresh self-signed cert to unit-test the TCP/QUIC ServerConfig builder (ADR 000014/000016).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# criterion: in-process micro-benchmarks for the fast-path hot functions (LB pick, route match,
# path normalization). `default-features = false` drops plotters/rayon — we only need the bench
# harness + baseline comparison (the CI regression gate uses --save-baseline / --baseline).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fastpath"
harness = false
