[package]
name = "plecto-control"
description = "Plecto's control plane: declarative manifest, OCI artifact loading, filter-chain dispatch, and atomic hot reload."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plecto-control"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# plecto-control — the control plane (ADR 000007 / 000008): a single declarative TOML
# manifest pins filters by OCI digest, an offline OCI image-layout store resolves them,
# the host loads them (ADR 000006 provenance), a chain dispatcher drives a request through
# them, and reload swaps the active set atomically. Single-node-first; remote registry fetch
# (wkg) is an out-of-band operator step, not embedded here.

# No libtest `#[bench]` fns in the lib; disable its bench harness so `cargo bench` runs ONLY the
# criterion targets (which alone understand `--save-baseline` for the CI regression gate).
[lib]
bench = false

[lints]
workspace = true

[features]
# Forwards to the host's outbound HTTP capability (ADR 000036). OFF by default: without it a
# manifest that declares `[filter.outbound_http]` is rejected at validate (fail-closed), since the
# host cannot provide the capability. When on, the section is parsed, validated, and lowered into
# the host `LoadOptions`.
outbound-http = ["plecto-host/outbound-http"]
# Forwards to the host's outbound TCP capability (ADR 000060) — same fail-closed rule for
# `[filter.outbound_tcp]` as outbound-http above.
outbound-tcp = ["plecto-host/outbound-tcp"]
# Forwards to the host's fat-guest minimal WASI grant (ADR 000063) — same fail-closed rule for
# `wasi = "minimal"` as outbound-http above (unlike those, no sub-config to lower: the grant is
# fixed).
fat-guest = ["plecto-host/fat-guest"]
# Marker for the instruction-count bench target (benches/fastpath_inst.rs): running it needs
# valgrind plus a version-matched gungraun-runner on PATH, so the target is skipped by a plain
# `cargo bench` (CI included) and opted into explicitly:
#   cargo bench -p plecto-control --features instruction-bench --bench fastpath_inst
instruction-bench = []

[dependencies]
plecto-host = { path = "../host" }
anyhow = { workspace = true }
# CIDR parse/containment: `[listen.proxy_protocol] trusted` (ADR 000057) always, plus the
# outbound `[filter.outbound_http]` / `[filter.outbound_tcp]` allow_private ranges (ADR 000036/000060).
ipnet = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# the manifest JSON Schema derive (ADR 000049): schema output that cannot drift from the structs.
schemars = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
# parking_lot: non-poisoning locks for the native rate limiter's bucket cells (ADR 000033). A
# data-plane panic must not cascade a poisoned lock across later requests (same rationale as the
# host's KV backend); the tiny lock also keeps the per-IP fixed table's per-slot guards cheap.
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# zeroize: wipe STEK input keying material / derived key buffers and TLS private-key PEM reads
# after the aws-lc-rs / rustls key objects are constructed — freed heap/stack must not retain
# key material (already resolved transitively via sigstore in plecto-host).
zeroize = { workspace = true }
oci-spec = { workspace = true }
# tracing: control-plane diagnostics for the reload loop (bp-rust: never println!).
tracing = { workspace = true }
# signal-hook: pure-Rust, no-tokio SIGHUP receiver behind the `ReloadSource` seam. SIGHUP is
# the operator's explicit "push a new static manifest" trigger (ADR 000008: static config, no
# xDS dynamic push). The trait keeps the loop fake-testable; this is the thin unix adapter.
signal-hook = "0.3"
# rustls (sync): build the TLS ServerConfig from the manifest's `[[tls]]` certs (SNI resolver,
# ALPN) at load/reload, so a bad cert fails closed and reload is atomic (ADR 000014). PEM parsing
# uses rustls-pki-types' `pem` module (re-exported by rustls). No tokio — control stays sync; the
# async acceptor lives in plecto-server.
rustls = { workspace = true }
# webpki-roots: the Mozilla root store the upstream TLS client (ADR 000042) verifies against when
# no `[upstream.tls] ca_path` names an internal CA. Compiled-in (no OS cert-store I/O at runtime).
webpki-roots = { workspace = true }
# aws-lc-rs (direct, beyond the rustls provider): the shared-STEK ticketer (ADR 000062) derives
# per-cert-set ticket keys with HKDF and seals tickets with AES-256-CBC + HMAC-SHA-256 — only
# aws-lc-rs primitives, per the ADR (one crypto backend, ADR 000051). Version-unified with the
# rustls `aws_lc_rs` feature's own dependency by cargo.
aws-lc-rs = "1"

[dev-dependencies]
# this crate's own integration tests load real fixture components via plecto-host's test_support
# (filter_hello_component / TestSigner / bound_sbom) — needs the feature that build.rs's fixture
# compilation and the `test_support` module are gated behind (OFF by default in `[dependencies]`).
plecto-host = { path = "../host", features = ["test-support"] }
# unique temp dirs for OCI-layout fixtures and trusted-key PEM files
tempfile = "3"
# rcgen: a fresh self-signed cert to unit-test the TCP/QUIC ServerConfig builder (ADR 000014/000016).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# proptest: pins the shared-STEK key schedule and ticket seal/open (ADR 000062) — determinism of
# the HKDF derivation, roundtrip over arbitrary plaintexts, and decrypt-never-panics over
# arbitrary attacker bytes.
proptest = "1"
# criterion: in-process micro-benchmarks for the fast-path hot functions (LB pick, route match,
# path normalization). `default-features = false` drops plotters/rayon — we only need the bench
# harness + baseline comparison (the CI regression gate uses --save-baseline / --baseline).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# gungraun (the renamed iai-callgrind): callgrind-based instruction counts for the LB pick hot
# path (benches/fastpath_inst.rs) — the deterministic twin of the criterion wall-clock benches.
# Dev-only + feature-gated (`instruction-bench`); see the host crate's note.
gungraun = "0.19"

[[bench]]
name = "fastpath"
harness = false

# Instruction-count twin of `fastpath` (LB pick only — the per-request ADR-surface judge).
# required-features keeps it out of a plain `cargo bench`.
[[bench]]
name = "fastpath_inst"
harness = false
required-features = ["instruction-bench"]
