[package]
name = "plecto-host"
description = "Plecto's wasmtime embedding host: loads, sandboxes, and runs plecto:filter WASM components (the extension plane)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
# Experimental streaming body filter (direction_0003 gates 1+2). OFF by default: the shipped
# plecto:filter@0.1.0 path and the default build are untouched. When on, it pulls a minimally-sliced
# WASI (wasi:http/proxy interfaces — no fs/sockets/env) and drives an async `stream<u8>` body filter
# on wasmtime's component-model-async. Building the fixture also needs `rustup target add
# wasm32-wasip2`. Stays out of the default build until wasm32-wasip3 reaches Tier 2.
streaming-body = ["dep:wasmtime-wasi", "wasmtime/component-model-async"]

[dependencies]
wasmtime = { workspace = true }
# Streaming-body only: a MINIMAL WASI slice (proxy interfaces — no fs/sockets/env) for the async
# stream<u8> guest, which unlike the no-WASI header-only filters imports wasi:io. Optional, so the
# default build never sees it.
wasmtime-wasi = { version = "46.0.0", optional = true }
# M3 Stage 1 (ADR 000021): a minimal `block_on` to drive wasmtime's now-async `call_async` /
# `instantiate_async` from the host's still-sync public API. The guest runs to completion on a
# fiber without suspending (epoch is trap-mode, host-API imports never block), so a no-reactor
# executor suffices. The server-side spawn_blocking removal (true async) is Stage 2.
pollster = "0.4"
anyhow = { workspace = true }
redb = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
sigstore = { workspace = true }
# SBOM↔component binding (ADR 000006 hardening): parse the SBOM in-toto statement and
# verify its subject digest is sha256(component), so a validly-signed but UNRELATED SBOM
# cannot be paired with a component (review f000003 #1).
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
# opentelemetry: OTel data-model types only (ADR 000009 observability stage; no-tokio).
opentelemetry = { workspace = true }

# build.rs builds the filter-hello guest (wasm32-unknown-unknown) and wraps the
# core module into a Component Model component, hermetically (no external CLI).
[build-dependencies]
wit-component = "0.252"

[dev-dependencies]
# unique on-disk paths for the redb backend's unit tests
tempfile = "3"
